--- a/templates/query.html
+++ b/templates/query.html
@@ -1,7 +1,7 @@
 <html>
    <body>
       <form action = "http://localhost:5000/results" method = "POST">
-         <p>Year <input type = "text" name = "query" /></p>
+         <p>How popular is <input type = "text" name = "query" />?</p>
       </form>
    </body>
 </html>
