--- a/templates/query.html
+++ b/templates/query.html
@@ -1,4 +1,7 @@
 <html>
+   <head>
+      <title>Twitter Popularity</title>
+  </head>
    <body>
       <form action = "http://localhost:5000/results" method = "POST">
          <p>How popular is <input type = "text" name = "query" />?</p>
