--- a/templates/results.html
+++ b/templates/results.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
     <head>
-        <title>Stock Pricer</title>
+        <title>Twitter Popularity</title>
     </head>
     <body>
-        <h3>Stock Price:</h3>
+        <h3>Twitter Sentiment:</h3>
         <div>
-            Tweets about <strong>{{ query }}</strong> are <strong>{{ predicted_price }}</strong>% positive.
+            Tweets about <strong>{{ query }}</strong> are <strong>{{ sentiment_score }}</strong>% positive.
         </div>
     </body>
 </html>
