--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,9 @@
   </head>
   <body>
     <form action = "http://localhost:5000/results" method = "POST">
-      <h1 class="prompt">
-        How popular is 
-        <input class="query" type = "text" name = "query" placeholder="Tesla" />
-        ?
-      </h1>
+      <h1 class="prompt left"> How popular is </h1>
+      <input class="query" type = "text" name = "query" placeholder="Tesla" /> 
+      <h1 class="prompt right"> ? </h1>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
