--- a/templates/results.html
+++ b/templates/results.html
@@ -1,31 +1,10 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Twitter Popularity</title>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-      </head>
-    <body>
-        <div class="prompt">
-            <h1> How popular is </h1>
-            <form class="form" id="form" action="http://localhost:5000/results" method="POST">
-                <input class="query" type="text" name="query" placeholder="Tesla" />
-            </form>
-            <h1> ? </h1>
-            <button type="submit" class="btn" form="form">Search</button>
-            <button type="button" class="btn" onclick=" window.location.href='/' ">Go Back</button>
-        </div>
-        <div class="result">
-            <h3>Twitter Sentiment:</h3>
-            <div>
-                Tweets about <strong style="color: #000000;">{{ query }}</strong> are <strong style="color: #000000;"">{{ sentiment_score }}</strong>% positive.
-            </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    </body>
-</html>
+{% extends 'query.html' %}
+
+{% block content %}
+<div class="result">
+    <h3>Twitter Sentiment:</h3>
+    <div>
+        Tweets about <strong style="color: #000000;">{{ query }}</strong> are <strong style="color: #000000;"">{{ sentiment_score }}</strong>% positive.
+    </div>
+</div>
+{% endblock %}
