--- a/templates/query.html
+++ b/templates/query.html
@@ -13,17 +13,19 @@
     <script src="{{ url_for('static', filename='script.js') }}"></script>
   </head>
   <body>
-    <div class="prompt">
-      <h1> How popular is </h1>
-      <form class="form" id="form" action="http://localhost:5000/results" method="POST">
-        <input class="query" type="text" name="query" placeholder="Tesla" oninput="autoResize(this)"/>
-      </form>
-      <h1> ? </h1>
-      <button type="submit" class="btn" form="form">Search</button>
-      <button type="button" class="btn" onclick=" window.location.href='/' ">Go Back</button>
+    <div class="main">
+      <div class="prompt">
+        <h1> How popular is </h1>
+        <form class="form" id="form" action="http://localhost:5000/results" method="POST">
+          <input class="query" type="text" name="query" placeholder="Tesla" oninput="autoResize(this)"/>
+        </form>
+        <h1> ? </h1>
+        <button type="submit" class="btn" form="form">Search</button>
+        <button type="button" class="btn" onclick=" window.location.href='/' ">Go Back</button>
+      </div>
+      {% block content %}
+      {% endblock %}
     </div>
-    {% block content %}
-    {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
